Add Facebook Album Selection

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,7 +1,7 @@
 <% include layouts/header %>
-<h2>Welcome</h2>
+<h2>Login Page</h2>
 <p>
-    Welcome to your express website
+    Please Login with an Petcurean Administrator Account
 </p>
 <a href="auth/facebook" class="facebook">Login with Facebook</a>
 <% include layouts/footer %>
